--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
         justify-content: center;
         align-items: center;
         border-radius: var(--radius-mobile);
-        max-width: 50%;
-        height: 50px;
+
+        height: 60px;
         gap: 10px;
       }
       .primary button:hover {
@@ -72,235 +72,6 @@
 
       .article {
         min-width: 380px;
-      }
-
-      /* farveskift mobil */
-      #sort {
-        width: 75px;
-        height: 40px;
-        top: 27px;
-        left: 31px;
-        animation-name: blink;
-        animation: blink 5s infinite;
-        animation-delay: 0s;
-        animation-direction: alternate;
-        position: absolute;
-      }
-      @keyframes blink {
-        0% {
-          opacity: 1;
-        }
-        1% {
-          opacity: 1;
-        }
-        24% {
-          opacity: 0;
-        }
-        25% {
-          opacity: 0;
-        }
-        49% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 0;
-        }
-        74% {
-          opacity: 0;
-        }
-        75% {
-          opacity: 0;
-        }
-        95% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-        }
-      }
-
-      #sol {
-        width: 75px;
-        height: 40px;
-        position: absolute;
-        top: 27px;
-        left: 31px;
-        animation-name: blink1;
-        animation: blink1 5s infinite;
-        animation-delay: 0s;
-        animation-direction: alternate;
-        position: absolute;
-      }
-      @keyframes blink1 {
-        0% {
-          opacity: 0;
-        }
-        1% {
-          opacity: 0;
-        }
-        24% {
-          opacity: 1;
-        }
-        25% {
-          opacity: 1;
-        }
-        49% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 0;
-        }
-        74% {
-          opacity: 0;
-        }
-        75% {
-          opacity: 0;
-        }
-        95% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-        }
-      }
-
-      #graes {
-        width: 75px;
-        height: 40px;
-        position: absolute;
-        top: 27px;
-        left: 31px;
-        animation-name: blink2;
-        animation: blink2 5s infinite;
-        animation-delay: 0s;
-        animation-direction: alternate;
-        position: absolute;
-      }
-      @keyframes blink2 {
-        0% {
-          opacity: 0;
-        }
-        1% {
-          opacity: 0;
-        }
-        24% {
-          opacity: 0;
-        }
-        25% {
-          opacity: 0;
-        }
-        49% {
-          opacity: 1;
-        }
-        50% {
-          opacity: 1;
-        }
-        74% {
-          opacity: 0;
-        }
-        75% {
-          opacity: 0;
-        }
-        95% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-        }
-      }
-
-      #himmel {
-        width: 75px;
-        height: 40px;
-        position: absolute;
-        top: 27px;
-        left: 31px;
-        animation-name: blink3;
-        animation: blink3 5s infinite;
-        animation-delay: 0s;
-        animation-direction: alternate;
-        position: absolute;
-      }
-      @keyframes blink3 {
-        0% {
-          opacity: 0;
-        }
-        1% {
-          opacity: 0;
-        }
-        24% {
-          opacity: 0;
-        }
-        25% {
-          opacity: 0;
-        }
-        49% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 0;
-        }
-        74% {
-          opacity: 1;
-        }
-        75% {
-          opacity: 1;
-        }
-        95% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-        }
-      }
-      #rust {
-        width: 75px;
-        height: 40px;
-        position: absolute;
-        top: 27px;
-        left: 31px;
-        animation-name: blink4;
-        animation: blink4 5s infinite;
-        animation-delay: 0s;
-        animation-direction: alternate;
-        position: absolute;
-      }
-      @keyframes blink4 {
-        0% {
-          opacity: 0;
-        }
-        1% {
-          opacity: 0;
-        }
-        24% {
-          opacity: 0;
-        }
-        25% {
-          opacity: 0;
-        }
-        49% {
-          opacity: 0;
-        }
-        50% {
-          opacity: 0;
-        }
-        74% {
-          opacity: 0;
-        }
-        75% {
-          opacity: 0;
-        }
-        95% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
-
-      .navigation_desktop {
-        display: none;
-        background-color: var(--background-color);
       }
 
       .stor_snefnug {
@@ -344,211 +115,6 @@
 
         .pile {
           display: none;
-        }
-
-        /* farveskift desktop  */
-        #sort {
-          width: 446px;
-          height: 33px;
-          animation-name: blink;
-          animation: blink 5s infinite;
-          animation-delay: 0s;
-          animation-direction: alternate;
-        }
-        @keyframes blink {
-          0% {
-            opacity: 1;
-          }
-          1% {
-            opacity: 1;
-          }
-          24% {
-            opacity: 0;
-          }
-          25% {
-            opacity: 0;
-          }
-          49% {
-            opacity: 0;
-          }
-          50% {
-            opacity: 0;
-          }
-          74% {
-            opacity: 0;
-          }
-          75% {
-            opacity: 0;
-          }
-          95% {
-            opacity: 1;
-          }
-          100% {
-            opacity: 0;
-          }
-        }
-
-        #sol {
-          width: 446px;
-          height: 33px;
-          animation-name: blink1;
-          animation: blink1 5s infinite;
-          animation-delay: 0s;
-          animation-direction: alternate;
-        }
-        @keyframes blink1 {
-          0% {
-            opacity: 0;
-          }
-          1% {
-            opacity: 0;
-          }
-          24% {
-            opacity: 1;
-          }
-          25% {
-            opacity: 1;
-          }
-          49% {
-            opacity: 0;
-          }
-          50% {
-            opacity: 0;
-          }
-          74% {
-            opacity: 0;
-          }
-          75% {
-            opacity: 0;
-          }
-          95% {
-            opacity: 1;
-          }
-          100% {
-            opacity: 0;
-          }
-        }
-
-        #graes {
-          width: 446px;
-          height: 33px;
-          animation-name: blink2;
-          animation: blink2 5s infinite;
-          animation-delay: 0s;
-          animation-direction: alternate;
-        }
-        @keyframes blink2 {
-          0% {
-            opacity: 0;
-          }
-          1% {
-            opacity: 0;
-          }
-          24% {
-            opacity: 0;
-          }
-          25% {
-            opacity: 0;
-          }
-          49% {
-            opacity: 1;
-          }
-          50% {
-            opacity: 1;
-          }
-          74% {
-            opacity: 0;
-          }
-          75% {
-            opacity: 0;
-          }
-          95% {
-            opacity: 1;
-          }
-          100% {
-            opacity: 0;
-          }
-        }
-
-        #himmel {
-          width: 446px;
-          height: 33px;
-          animation-name: blink3;
-          animation: blink3 5s infinite;
-          animation-delay: 0s;
-          animation-direction: alternate;
-        }
-        @keyframes blink3 {
-          0% {
-            opacity: 0;
-          }
-          1% {
-            opacity: 0;
-          }
-          24% {
-            opacity: 0;
-          }
-          25% {
-            opacity: 0;
-          }
-          49% {
-            opacity: 0;
-          }
-          50% {
-            opacity: 0;
-          }
-          74% {
-            opacity: 1;
-          }
-          75% {
-            opacity: 1;
-          }
-          95% {
-            opacity: 1;
-          }
-          100% {
-            opacity: 0;
-          }
-        }
-        #rust {
-          width: 446px;
-          height: 33px;
-          animation-name: blink4;
-          animation: blink4 5s infinite;
-          animation-delay: 0s;
-          animation-direction: alternate;
-        }
-        @keyframes blink4 {
-          0% {
-            opacity: 0;
-          }
-          1% {
-            opacity: 0;
-          }
-          24% {
-            opacity: 0;
-          }
-          25% {
-            opacity: 0;
-          }
-          49% {
-            opacity: 0;
-          }
-          50% {
-            opacity: 0;
-          }
-          74% {
-            opacity: 0;
-          }
-          75% {
-            opacity: 0;
-          }
-          95% {
-            opacity: 1;
-          }
-          100% {
-            opacity: 1;
-          }
         }
       }
 
@@ -904,78 +470,83 @@
   <body>
     <!-- header -->
     <header>
-      <div class="navigation_desktop">
-        <img
-          class="logo_lang"
-          id="sort"
-          src="img/logo/bb_logo_lang.png"
-          alt=""
-        />
-        <img
-          class="logo_lang_sol"
-          id="sol"
-          src="img/logo/bb_logo_lang_sol.png"
-          alt=""
-        />
-        <img
-          class="logo_lang_graes"
-          id="graes"
-          src="img/logo/bb_logo_lang.png"
-          alt=""
-        />
-        <img
-          class="logo_lang_himmel"
-          id="himmel"
-          src="img/logo/bb_logo_lang_himmel.png"
-          alt=""
-        />
-        <img
-          class="logo_lang_rust"
-          id="rust"
-          src="img/logo/bb_logo_lang_rust.png"
-          alt=""
-        />
+      <!-- NAVIGATION DESKTOP -->
+      <div>
+        <a class="navigation_desktop" href="index.html">
+          <img
+            class="logo_lang"
+            id="sort"
+            src="img/logo/bb_logo_lang.png"
+            alt=""
+          />
+          <img
+            class="logo_lang"
+            id="sol"
+            src="img/logo/bb_logo_lang_sol.png"
+            alt=""
+          />
+          <img
+            class="logo_lang"
+            id="graes"
+            src="img/logo/bb_logo_lang.png"
+            alt=""
+          />
+          <img
+            class="logo_lang"
+            id="himmel"
+            src="img/logo/bb_logo_lang_himmel.png"
+            alt=""
+          />
+          <img
+            class="logo_lang"
+            id="rust"
+            src="img/logo/bb_logo_lang_rust.png"
+            alt=""
+          />
+        </a>
       </div>
+
+      <!-- NAVIGATION MOBIL -->
       <section class="navigation_mobil">
-        <button>
-          <a href="">
-            <img
-              class="logo_kort"
-              id="sort"
-              src="img/logo/bb_logo_kort.png"
-              alt=""
-            />
-            <img
-              class="logo_kort"
-              id="sol"
-              src="img/logo/bb_logo_kort_sol.png"
-              alt=""
-            />
-            <img
-              class="logo_kort"
-              id="graes"
-              src="img/logo/bb_logo_kort_graes.png"
-              alt=""
-            />
-            <img
-              class="logo_kort"
-              id="himmel"
-              src="img/logo/bb_logo_kort_himmel.png"
-              alt=""
-            />
-            <img
-              class="logo_kort"
-              id="rust"
-              src="img/logo/bb_logo_kort_rust.png"
-              alt=""
-            />
-          </a>
-        </button>
+        <a class="logo_mobil" href="">
+          <img
+            class="logo_kort"
+            id="sort"
+            src="img/logo/bb_logo_kort.png"
+            alt=""
+          />
+          <img
+            class="logo_kort"
+            id="sol"
+            src="img/logo/bb_logo_kort_sol.png"
+            alt=""
+          />
+          <img
+            class="logo_kort"
+            id="graes"
+            src="img/logo/bb_logo_kort_graes.png"
+            alt=""
+          />
+          <img
+            class="logo_kort"
+            id="himmel"
+            src="img/logo/bb_logo_kort_himmel.png"
+            alt=""
+          />
+          <img
+            class="logo_kort"
+            id="rust"
+            src="img/logo/bb_logo_kort_rust.png"
+            alt=""
+          />
+        </a>
+
         <div class="burger">
           <button class="toggle-btn">☰</button>
         </div>
       </section>
 
+      <!-- IKONER TIL BEGGE -->
       <nav class="lg:flex">
         <ul>
           <li>
@@ -1025,6 +596,7 @@
             <a href="" class="font-other-headings text-h3-mobile">Kontakt os</a>
           </li>
         </ul>
+
         <ol class="secondary_nav">
           <li><img class="person" src="img/ikoner/person.svg" alt="" /></li>
           <li>
@@ -1037,7 +609,7 @@
 
     <!-- hero section -->
     <section class="baggrundsbillede">
-      <div class="lg:p-xxl-spacing-mobile">
+      <div class="lg:p-xxl-spacing-mobile lg:pb-m-spacing-desktop">
         <div class="lg:flex lg:border-2 lg:border-sol-300">
           <div class="lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile">
             <img
@@ -1050,7 +622,7 @@
             <h1
               class="pt-s-spacing-mobile text-h1-mobile text-sol-300 lg:text-h1-desktop"
             >
-              Bring sæsonnen hjem til dig
+              Bring sæsonen hjem til dig
             </h1>
             <p
               class="pt-l-spacing-mobile font-font-body text-body-mobile text-sol-300 lg:text-body-desktop"
@@ -1071,6 +643,20 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="py-xs-spacing-mobile">
+        <svg
+          class="mx-auto grid text-sol-300"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+        >
+          <path
+            fill="currentColor"
+            d="m20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8l8-8z"
+          ></path>
+        </svg>
       </div>
     </section>
     <main class="overflow-x-clip">
