--- a/src/index.html
+++ b/src/index.html
@@ -432,19 +432,17 @@
         <div class="lg:flex lg:border-2 lg:border-sol-300">
           <div class="lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile">
             <img
-              class="lg:w-[866px] lg:pt-s-spacing-mobile"
+              class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[866px] lg:pt-s-spacing-mobile"
               src="img/logo/bb_ill_sol.png"
               alt=""
             />
           </div>
-          <div class="px-16 text-center">
-            <h1
-              class="pt-s-spacing-mobile text-h1-mobile text-sol-300 lg:text-h1-desktop"
-            >
+          <div class="text-center">
+            <h1 class="text-h1-mobile text-sol-300 lg:text-h1-desktop">
               Bring sæsonen hjem til dig
             </h1>
             <p
-              class="pt-l-spacing-mobile font-font-body text-body-mobile text-sol-300 lg:text-body-desktop"
+              class="pt-xxxs-spacing-mobile font-font-body text-body-mobile text-sol-300 lg:text-body-desktop"
             >
               Med et abonnement hos Blomster Bjarne får du leveret unikke
               buketter fra hver sæson.
