--- a/src/index.html
+++ b/src/index.html
@@ -428,11 +428,11 @@
 
     <!-- hero section -->
     <section class="baggrundsbillede">
-      <div class="lg:p-xxl-spacing-mobile lg:pb-m-spacing-desktop">
+      <div class="lg:p-l-spacing-mobile lg:pb-m-spacing-desktop">
         <div class="lg:flex lg:border-2 lg:border-sol-300">
           <div class="lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile">
             <img
-              class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[600px] lg:pt-s-spacing-mobile"
+              class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
               src="img/logo/bb_ill_sol.png"
               alt=""
             />
