--- a/src/index.html
+++ b/src/index.html
@@ -371,14 +371,18 @@
           <li>
             <a
               href="abonnement.html"
-              class="mt-8 font-other-headings text-h3-mobile"
+              class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Abonnement</a
             >
           </li>
           <div class="dropdown">
             <label tabindex="0">
               <button class="flex gap-s-spacing-mobile">
-                <p class="font-other-headings text-h3-mobile">Sortiment</p>
+                <p
+                  class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+                >
+                  Sortiment
+                </p>
                 <svg width="40" height="40" viewBox="0 0 24 24">
                   <path
                     fill="#000000"
@@ -391,7 +395,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
                   href="abonnement.html"
                   >Blomster</a
                 >
@@ -399,7 +403,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
                   href="abonnement.html"
                   >Vaser</a
                 >
@@ -407,21 +411,35 @@
             </ul>
           </div>
           <li>
-            <a href="" class="font-other-headings text-h3-mobile"
+            <a
+              href=""
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
             >
           </li>
           <li>
-            <a href="" class="font-other-headings text-h3-mobile">Kontakt os</a>
+            <a
+              href=""
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Kontakt os</a
+            >
           </li>
         </ul>
 
         <ol class="secondary_nav">
-          <li><img class="person" src="img/ikoner/person.svg" alt="" /></li>
           <li>
-            <img class="shopping" src="img/ikoner/shopping_bag.svg" alt="" />
+            <img class="person h-8 w-8" src="img/ikoner/person.svg" alt="" />
           </li>
-          <li><img class="search" src="img/ikoner/search.svg" alt="" /></li>
+          <li>
+            <img
+              class="shopping h-8 w-8"
+              src="img/ikoner/shopping_bag.svg"
+              alt=""
+            />
+          </li>
+          <li>
+            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="" />
+          </li>
         </ol>
       </nav>
     </header>
@@ -429,7 +447,7 @@
     <!-- hero section -->
     <section class="baggrundsbillede">
       <div class="lg:p-l-spacing-mobile lg:pb-m-spacing-desktop">
-        <div class="lg:flex lg:border-2 lg:border-sol-300">
+        <div class="lg:grid lg:grid-cols-2 lg:border-2 lg:border-sol-300">
           <div class="lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile">
             <img
               class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
