--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -135,6 +135,8 @@
       >
         <p>Køb dine blomster i vores butikker</p>
         <p>Bestil dit abonnement på vores webshop</p>
+        <p><a href="logind.html">Logind</a></p>
+        <p><a href="cookie.html">cookie</a></p>
       </div>
     </header>
 
