--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,7 @@
         <p>Bestil dit abonnement på vores webshop</p>
       </div>
       <!-- LOGO DESKTOP -->
-      <div>
+      <section>
         <a class="navigation_desktop" href="index.html">
           <img
             class="logo_lang"
