--- a/src/index.html
+++ b/src/index.html
@@ -545,8 +545,14 @@
           netop den vase eller den blomst, der skal være en del af dit
           enestående hjem.
         </p>
-        <div class="primary py-xl-spacing-mobile lg:py-xl-spacing-desktop">
-          <button class="mx-auto">Se vores udvalg af blomster</button>
+        <div
+          class="flex justify-center py-xl-spacing-mobile lg:py-xl-spacing-desktop"
+        >
+          <a
+            class="flex max-w-[50%] flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            href=""
+            >Se vores udvalg af blomster</a
+          >
         </div>
       </section>
 
