--- a/src/index.html
+++ b/src/index.html
@@ -50,31 +50,6 @@
         background-color: var(--color-primary-button-hover-background);
       }
 
-      .secondary button {
-        background-color: var(--color-secondary-button-background);
-        color: var(--color-secondary-button-text);
-        border: var(--color-secondary-button-border) 2px solid;
-
-        font-family: var(--button-text);
-        font-weight: var(--font-weight-semibold);
-        font-size: var(--button-mobile);
-        padding: 15px 40px;
-        max-width: 50%;
-        height: 50px;
-
-        box-shadow: var(--shadow);
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        border-radius: var(--radius-mobile);
-
-        gap: 10px;
-      }
-      .secondary button:hover {
-        background-color: var(--color-secondary-button-hover-background);
-      }
-
       .article {
         min-width: 380px;
       }
@@ -98,7 +73,6 @@
           display: block;
         }
 
-        .secondary button,
         .primary button {
           font-size: var(--button-desktop);
           padding: 15px 60px;
@@ -261,20 +235,20 @@
         #banner_section img {
           min-width: 120%;
         }
-        #banner_section div {
-          height: 180px;
+        #banner_section figure {
+          height: 200px;
         }
         @keyframes banner_animate_delay {
           0% {
             transform: translateX(0px);
           }
           100% {
-            transform: translateX(1600px);
+            transform: translateX(1850px);
           }
         }
         @keyframes banner_animate {
           0% {
-            transform: translateX(-1600px);
+            transform: translateX(-1850px);
           }
           100% {
             transform: translateX(0px);
@@ -549,7 +523,7 @@
           class="flex justify-center py-xl-spacing-mobile lg:py-xl-spacing-desktop"
         >
           <a
-            class="flex max-w-[50%] flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
             href=""
             >Se vores udvalg af blomster</a
           >
@@ -650,7 +624,7 @@
                 </div>
               </div>
               <div class="overskrift">
-                <h4 class="pt-xxs-spacing-desktop">Solsikke</h4>
+                <h3 class="pt-xxs-spacing-desktop">Solsikke</h3>
               </div>
             </div>
           </article>
@@ -660,11 +634,11 @@
               <img src="img/ikoner/fliparrow_ikon.svg" alt="flip pil" />
             </div>
             <div class="overskrift">
-              <h4
+              <h3
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Solsikke
-              </h4>
+              </h3>
             </div>
             <div class="mx-xl-spacing-mobile flex gap-s-spacing-mobile">
               <img src="img/ikoner/oprindelse_ikon.svg" alt="'oprindelse" />
@@ -709,11 +683,11 @@
               <img src="img/ikoner/fliparrow_ikon.svg" alt="flip pil" />
             </div>
             <div class="overskrift">
-              <h4
+              <h3
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Sweet fennel
-              </h4>
+              </h3>
             </div>
             <div class="mx-xl-spacing-mobile flex gap-s-spacing-mobile">
               <img src="img/ikoner/oprindelse_ikon.svg" alt="oprindelse" />
@@ -744,7 +718,7 @@
                 </div>
               </div>
               <div class="overskrift">
-                <h4 class="pt-xxs-spacing-desktop">Orkidé</h4>
+                <h3 class="pt-xxs-spacing-desktop">Orkidé</h3>
               </div>
             </div>
           </article>
@@ -754,11 +728,11 @@
               <img src="img/ikoner/fliparrow_ikon.svg" alt="flip pil" />
             </div>
             <div class="overskrift">
-              <h4
+              <h3
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Okkide
-              </h4>
+              </h3>
             </div>
             <div class="ml-xl-spacing-mobile flex gap-s-spacing-mobile">
               <img src="img/ikoner/oprindelse_ikon.svg" alt="oprindelse" />
@@ -798,28 +772,34 @@
           class="flex gap-10 overflow-x-scroll pb-20 lg:mt-xl-spacing-desktop"
         >
           <div class="article px-m-spacing-mobile">
-            <div class="flex justify-center gap-3 py-l-spacing-mobile">
-              <svg width="32" height="32" viewBox="0 0 24 24">
+            <figure class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 1">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 2">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 3">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-            </div>
+            </figure>
             <div class="flex">
-              <svg class="pile" width="50" height="50" viewBox="0 0 24 24">
+              <svg
+                class="pile"
+                width="50"
+                height="50"
+                viewBox="0 0 24 24"
+                alt="pil til venstre"
+              >
                 <path
                   fill="#888888"
                   d="M9.125 21.1L.7 12.7q-.15-.15-.212-.325Q.425 12.2.425 12t.063-.375Q.55 11.45.7 11.3l8.425-8.425q.35-.35.875-.35t.9.375q.375.375.375.875t-.375.875L3.55 12l7.35 7.35q.35.35.35.862q0 .513-.375.888t-.875.375q-.5 0-.875-.375Z"
@@ -835,6 +815,7 @@
                 width="50"
                 height="50"
                 viewBox="0 0 24 24"
+                alt="pil til højre"
               >
                 <path
                   fill="#888888"
@@ -851,28 +832,34 @@
             </div>
           </div>
           <div class="article px-m-spacing-mobile">
-            <div class="flex justify-center gap-3 py-l-spacing-mobile">
-              <svg width="32" height="32" viewBox="0 0 24 24">
+            <figure class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 1">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 2">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 3">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-            </div>
+            </figure>
             <div class="flex">
-              <svg class="pile" width="50" height="50" viewBox="0 0 24 24">
+              <svg
+                class="pile"
+                width="50"
+                height="50"
+                viewBox="0 0 24 24"
+                alt="pil til venstre"
+              >
                 <path
                   fill="#888888"
                   d="M9.125 21.1L.7 12.7q-.15-.15-.212-.325Q.425 12.2.425 12t.063-.375Q.55 11.45.7 11.3l8.425-8.425q.35-.35.875-.35t.9.375q.375.375.375.875t-.375.875L3.55 12l7.35 7.35q.35.35.35.862q0 .513-.375.888t-.875.375q-.5 0-.875-.375Z"
@@ -888,6 +875,7 @@
                 width="50"
                 height="50"
                 viewBox="0 0 24 24"
+                alt="pil til højre"
               >
                 <path
                   fill="#888888"
@@ -904,28 +892,34 @@
             </div>
           </div>
           <div class="article">
-            <div class="flex justify-center gap-3 py-l-spacing-mobile">
-              <svg width="32" height="32" viewBox="0 0 24 24">
+            <figure class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 1">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 2">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-              <svg width="32" height="32" viewBox="0 0 24 24">
+              <svg width="32" height="32" viewBox="0 0 24 24" alt="stjerne 3">
                 <path
                   fill="#edc551"
                   d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
                 />
               </svg>
-            </div>
+            </figure>
             <div class="flex">
-              <svg class="pile" width="50" height="50" viewBox="0 0 24 24">
+              <svg
+                class="pile"
+                width="50"
+                height="50"
+                viewBox="0 0 24 24"
+                alt="pil til venstre"
+              >
                 <path
                   fill="#888888"
                   d="M9.125 21.1L.7 12.7q-.15-.15-.212-.325Q.425 12.2.425 12t.063-.375Q.55 11.45.7 11.3l8.425-8.425q.35-.35.875-.35t.9.375q.375.375.375.875t-.375.875L3.55 12l7.35 7.35q.35.35.35.862q0 .513-.375.888t-.875.375q-.5 0-.875-.375Z"
@@ -942,6 +936,7 @@
                 width="50"
                 height="50"
                 viewBox="0 0 24 24"
+                alt="pil til højre"
               >
                 <path
                   fill="#888888"
@@ -972,10 +967,10 @@
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h4>
+            <h2 class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h2>
 
             <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
-              <div class="strandvejen">
+              <address class="strandvejen">
                 <p>Strandvejen 167</p>
                 <p>2900 Hellerup</p>
                 <p>Danmark</p>
@@ -983,32 +978,32 @@
                   <a href="tel:+4539629059"></a>
                   Tlf.: +45 39 62 90 59
                 </p>
-              </div>
+              </address>
 
-              <div class="gunnar">
+              <address class="gunnar">
                 <p>Gunnar Nu Hansens Pl. 6</p>
                 <p>2100 København Ø</p>
                 <p>Danmark</p>
                 <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
-              </div>
+              </address>
 
-              <div class="vaernedamsvej">
+              <address class="vaernedamsvej">
                 <p>Værnedamsvej 4A st.</p>
                 <p>1619 København V</p>
                 <p>Danmark</p>
                 <p><a href="tel:+4526117006"></a>Tlf.: +45 26 11 70 06</p>
-              </div>
+              </address>
             </div>
           </section>
 
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
-            <h4
+            <h2
               class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
             >
               INFORMATIONER
-            </h4>
+            </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a href="#">Om os</a>
@@ -1025,7 +1020,7 @@
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 class="text-h4-mobile lg:text-h4-desktop">ÅBNINGSTIDER</h4>
+            <h2 class="text-h4-mobile lg:text-h4-desktop">ÅBNINGSTIDER</h2>
             <div class="tider grid grid-cols-2">
               <div
                 class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
@@ -1055,11 +1050,13 @@
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
-            <h4 class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop">
+            <h2 class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop">
               FØLG OS HER
-            </h4>
-            <div class="ikoner flex place-content-center gap-m-spacing-mobile">
-              <svg width="40" height="40" viewBox="0 0 48 48">
+            </h2>
+            <figure
+              class="ikoner flex place-content-center gap-m-spacing-mobile"
+            >
+              <svg width="40" height="40" viewBox="0 0 48 48" alt="facebook">
                 <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
                   <path
                     stroke="#fffdf9"
@@ -1074,7 +1071,12 @@
                   ></path>
                 </g>
               </svg>
-              <svg width="44" height="44" viewBox="0 0 512 512">
+              <svg
+                width="44"
+                height="44"
+                viewBox="0 0 512 512"
+                class="instagram"
+              >
                 <path
                   fill="#fffdf9"
                   d="M349.33 69.33a93.62 93.62 0 0 1 93.34 93.34v186.66a93.62 93.62 0 0 1-93.34 93.34H162.67a93.62 93.62 0 0 1-93.34-93.34V162.67a93.62 93.62 0 0 1 93.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32Z"
@@ -1084,7 +1086,7 @@
                   d="M377.33 162.67a28 28 0 1 1 28-28a27.94 27.94 0 0 1-28 28ZM256 181.33A74.67 74.67 0 1 1 181.33 256A74.75 74.75 0 0 1 256 181.33m0-37.33a112 112 0 1 0 112 112a112 112 0 0 0-112-112Z"
                 ></path>
               </svg>
-            </div>
+            </figure>
           </section>
         </div>
 
