--- a/src/index.html
+++ b/src/index.html
@@ -769,7 +769,7 @@
           Testimonials
         </h2>
         <article
-          class="flex gap-10 overflow-x-scroll pb-20 lg:mt-xl-spacing-desktop"
+          class="flex snap-center gap-10 overflow-x-scroll pb-20 lg:mt-xl-spacing-desktop"
         >
           <div class="article px-m-spacing-mobile">
             <figure class="flex justify-center gap-3 py-l-spacing-mobile">
